# Multi-Agent-for-Cyber-Forensics

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  config.py  main.py  pyproject.toml
backend/agents/: deliberation.py  escalation.py  graph.py  investigator.py  sentiment.py  state.py
backend/agents/prompts/: investigator_policy.md  sentiment_policy.md
backend/agents/tools/: embedding_compare.py  neo4j_queries.py  vader_analysis.py
backend/api/: routes_analysis.py  routes_forensic.py  routes_graph.py  routes_human.py  ws_alerts.py
backend/db/: neo4j_client.py  sqlite_client.py
backend/forensic/: counterfactual.py  exporters.py  hasher.py  schema.py  store.py  tamper_sim.py  wrapper.py
backend/integrations/: slack_mcp.py
data/: claude_opus_ground_truth_2000.json  mas_predictions.json  metrics_report.md
data/scripts/: analyze_failure_modes.py  batch_evaluate_mas.py  download_enron.py  evaluate_metrics.py  generate_ground_truth.py  import_neo4j.py  parse_maildir.py  prepare_deidentified.py  seed_curated.py
docs/: deidentification_pipeline.md  eval_ground_truth_implementation_plan.md  model_migration_plan.md  presentation_talking_points.md
experiments/: ENSEMBLE_ANALYSIS.md  ERROR_ANALYSIS.md  EXPERIMENT_JOURNAL.md  FINDINGS_FOR_REPORT.md  PREREGISTRATION.md  README.md  TEST_RETEST_ANALYSIS.md  decide_scale.py  run_chain.sh  run_chain_phase2.sh  run_condition.py
experiments/analysis/: compare_runs.py  ensemble.py  (+3 more)
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+104 files in other folders)
