[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "db*", "forensic*", "integrations*"]

[project]
name = "enron-threat-analysis"
version = "0.1.0"
description = "Multi-Agent Insider Threat Analysis with Forensic Traceability"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "neo4j>=5.25.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    "anthropic>=0.25.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "vaderSentiment>=3.3.2",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "reportlab>=4.2.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
observability = [
    "langfuse>=2.50.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]
